<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddRecipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Add_Recipe_Name"
            android:layout_width="372dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/Add_Recipe_image"
            android:layout_width="fill_parent"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <!--
        android:src="@drawable/clip_source"/>
        -->

    <EditText
        android:id="@+id/Add_Recipe_Procedure"
        android:layout_width="372dp"
        android:layout_height="95dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/procedure"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/Add_Recipe_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Add_Recipe_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="195dp" />

    <Button
        android:id="@+id/Add_Recipe_Save"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="addRecipe"
        android:text="@string/save" />
</LinearLayout>